# ansible-collection-ceph

./: .ansible-lint  .conflict-files  .gitignore  .pre-commit-config.yaml  .zuul.yaml  CHANGELOG.md  Jenkinsfile  galaxy.yml  pyproject.toml  renovate.json  requirements.txt  test-requirements.txt  tox.ini
.conflict-base-0/: CHANGELOG.md  README.md  galaxy.yml
.conflict-base-0/.github/workflows/: ci.yaml  release-please.yaml
.conflict-base-0/molecule/aio/: cleanup.yml  converge.yml
.conflict-base-0/molecule/ha/: prepare.yml  verify.yml
.conflict-base-0/playbooks/: create_fake_devices.yml
.conflict-side-0/molecule/ceph/: converge.yml
.conflict-side-0/playbooks/: destroy_fake_devices.yml
.conflict-side-0/plugins/modules/: pool.py
.conflict-side-0/roles/cephadm_host/: README.md
.github/workflows/: ansible-test.yml  ci.yaml  molecule.yml  release-please.yaml
extensions/molecule/default/: converge.yml  prepare.yml  verify.yml
molecule/aio/: molecule.yml
molecule/ceph/: converge.yml  prepare.yml  verify.yml
molecule/ha/: molecule.yml
playbooks/: create_fake_devices.yml  destroy_fake_devices.yml  site.yml
plugins/filter/: duplicate_filter.py
plugins/module_utils/: ca_common.py
plugins/modules/: config.py  dashboard_user.py  key.py  key_info.py  loop_device.py  mgr_module.py  orch_apply.py  pool.py
roles/ceph_settings/: README.md
roles/ceph_settings/defaults/: main.yml
roles/ceph_settings/meta/: main.yml
roles/cephadm/: README.md
roles/upgrade_check/: README.md
zuul.d/: abstract-jobs.yaml  jobs.yaml  project.yaml
(+57 files in other folders)
